# eu4-autosave-archiver

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile.am  Makefile.common  PKGBUILD  README.md  autogen.sh  build-autotools.sh  build.sh  configure.ac
data/: savefile_dirs.txt
examples/: sample.data
man/: Makefile.am  plan.1
src/: .main.cpp  CMakeLists.txt  Config.cpp  Config.h  KNearestOcr.cpp  KNearestOcr.h  Makefile.am  OCR.cpp  SavefileManager.cpp  ScreenShot.cpp  SpellCheck.cpp  build.sh  main.cpp  text.txt  trainctr.yml
src/FileWatcher/: FileWatcher.h
src/impl/: bk_tree.hpp  delay.hpp  levenshtein_distance.hpp  mkdir.cpp
